@@ -158,7 +158,7 @@ public class QudvUnitCellEditingSupport extends ValuePropertyCellEditingSupport 
 	@Override
 	protected Command createSetCommand(Object element, Object userInputValue) {
 		if (userInputValue == CHANGE_VALUE) {
-			userInputValue = new Integer(0);
+			userInputValue = Integer.valueOf(0);
 		}
 		
 		if (((int) userInputValue) < 0) {
